choose-mirror (1.16) UNRELEASED; urgency=low

  [ Joey Hess ]
  * Split input templates files into separate files for http, ftp, and both,
    modify build process so only the relevant templates get included based on
    the protocol support that is built in to the binary. Allows saving
    hundreds of K by disabling ftp support.
  * Queue apt-mirror-setup for installation, this is part of the apt-setup
    replacement that I've not quite gotten around to finishing yet. In the
    meantime, queuing it should be harmless.

  [ Colin Watson ]
  * Read DISTRIB_CODENAME from /etc/lsb-release if it's present, and use
    that to override the hardcoded PREFERRED_DISTRIBUTION.
  * Remove unnecessary differences between the HTTP and FTP templates.

 -- Joey Hess <joeyh@debian.org>  Mon, 26 Sep 2005 17:02:50 +0200

choose-mirror (1.15) unstable; urgency=low

  * Updated translations: 
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Tagalog (tl.po) by Eric Pareja

 -- Joey Hess <joeyh@debian.org>  Fri, 15 Jul 2005 16:48:00 +0300

choose-mirror (1.14) unstable; urgency=low

  * Updated translations:
    - Indonesian (id.po) by Arief S Fitrianto
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov
    - Vietnamese (vi.po) added by Clytie Siddall

 -- Christian Perrier <bubulle@debian.org>  Wed,  6 Jul 2005 21:06:34 +0200

choose-mirror (1.13) unstable; urgency=low

  * Joey Hess
    - Turn on -Os and -fomit-frame-pointer, doesn't save much space tho.
    - Switch PREFERRED_DISTRIBUTION to etch.
  * Updated translations: 
    - Greek, Modern (1453-) (el.po) by Greek Translation Team

 -- Joey Hess <joeyh@debian.org>  Tue, 28 Jun 2005 21:28:30 -0400

choose-mirror (1.12) unstable; urgency=low

  * Colin Watson
    - Switch to using iso_3166.xml rather than the deprecated iso_3166.tab,
      by the crude method of copying iso3166tab.py from the iso-codes source