@@ -1,4 +1,8 @@
 choose-mirror (1.16) UNRELEASED; urgency=low
+  [ Sylvain Ferriol ]
+  * A mirror can not have an 'etch' dist. choose-mirror is now able to find
+    distributions avalaible in the mirror and select the preferred using a 
+    built-in list.
 
   [ Joey Hess ]
   * Split input templates files into separate files for http, ftp, and both,
